Панель админа и менеджера

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,13 +1,43 @@
 <!doctype html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user_id-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Успешная авторизация</title>
 </head>
 <body>
     <h1>Авторизация прошла успешно!</h1>
+    <h1>Привет, <span th:text="${username}">User</span>!</h1>
+
+    <div th:if="${#lists.contains(roles, 'ROLE_ADMIN')}">
+        <a href="success/admin" class="btn btn-primary">Перейти в панель администратора</a>
+    </div>
+
+    <div th:if="${#lists.contains(roles, 'ROLE_CURIER')}">
+        <a href="success/curier" class="btn btn-secondary">Перейти в панель курьера</a>
+    </div>
+
+    <div th:if="${#lists.contains(roles, 'ROLE_MANAGER')}">
+        <a href="success/manager" class="btn btn-secondary">Перейти в панель менеджера</a>
+    </div>
+
+    <div th:if="${#lists.contains(roles, 'ROLE_COLLECTOR')}">
+        <a href="success/collector" class="btn btn-secondary">Перейти в панель сборщика</a>
+    </div>
+
+    <div th:if="${#lists.contains(roles, 'ROLE_STORAGE')}">
+        <a href="success/storage" class="btn btn-secondary">Перейти в панель работника склада</a>
+    </div>
+
+    <form action="/success/tasks">
+        <input type="submit" value="посмотреть мои таски" />
+    </form>
+    <form action="/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <button type="submit">Выйти</button>
+    </form>
 </body>
 </html>
